# Zith

./: .gitignore  CMakeLists.txt  ReadMe.md  install.sh  kalidous doc.html  main.cpp  novaProject.toml  wrangler.jsonc
.cache/clangd/index/: CLI.cpp.D38338FBD2C7CEFC.idx  CLI.cpp.F196D511E4020621.idx  arena.hpp.94FE8BA9B8AF95B3.idx  arena.hpp.FA5624C0BE6A3BED.idx  arena_c_functions.c.218ECC454AC5231E.idx  arena_c_functions.h.B2249688845DA7DC.idx  ast.cpp.67CFC75B56C5AE11.idx  ast.cpp.6E2AB5571B4CF102.idx  ast.h.65F7E6EE56C3DEDA.idx  debug.h.37FF2C1FE317923E.idx  debug.h.8FB63A69A3340DC9.idx  diagnostics.cpp.2A6BE2C74E3DBD1B.idx  diagnostics.hpp.63BF3596AD87CDAF.idx  file.c.21AD6221DDBAB57B.idx  import.h.9015E57693FD525D.idx  import.hpp.9F4C38E4468A7D13.idx  kalidous.h.F0EED0E2287E81B9.idx  kalidous.hpp.7AE843E50F60512A.idx  keywords.cpp.8ED3DDA9977FAF80.idx  main.cpp.2892894B0BA61200.idx  main.cpp.7AB2D89E5F34035F.idx  parser.cpp.2FF9F8FEDA299798.idx  parser.cpp.4329662634CD735D.idx  parser.h.8DBD24939C4F4E2B.idx  parser.h.ADB6B1E407D377BA.idx  parser_context.hpp.7F1E518249FAB549.idx  parser_context.hpp.EE20B0250F3430D9.idx  parser_decl.cpp.01522F11B5316C11.idx  parser_decl.cpp.E6249F0D9488B073.idx  parser_expr.cpp.5A0555372EA01EE4.idx  parser_expr.cpp.8EDBCF86709FB377.idx  parser_sema.cpp.47D2690022D28F6B.idx  parser_test.cpp.D7F7C4C325D08631.idx  parser_utils.cpp.60D8CFF4DE39E100.idx  parser_utils.cpp.8B49E67F5A05CE59.idx  symbol_table.hpp.583F6249A4777FAB.idx  test_expand_sema.cpp.A00ABEF742D9AAFB.idx  test_import.cpp.BDB973025C0F308F.idx  test_main.cpp.75A957B992CF9BFE.idx  test_parser.cpp.5BE36EFB6B883FC2.idx  (+4 more)
.github/scoop/: kalidous.json
.github/scoop/bucket/: kalidous.json  zith.json
.github/workflows/: build-release.yml  build.yml  create-release.yml  release.yml  scoop-hash.yml  tag.yml  trigger-release.yml  update-scoop.yml
.qwen/: settings.json  settings.json.orig
docs/: 404.html  CNAME  Philosopy.md  README.md  ReadMe.md  Type rules.txt  docs.html  index.html  license  sitemap.xml
docs/assets/css/: style.css
docs/assets/css/modules/: animations.css  base.css  components.css  home.css  layout.css
docs/assets/js/: 04826460.c13add9d.js  2ce28710.8e40b003.js  31cbe907.65056186.js  33fa7447.1ee85920.js  3707c695.f177b017.js  37ca5e07.110fc2f7.js  37ca5e07.835a4b2e.js  39ddb24d.c4d7b35a.js  417b080a.6098635f.js  4196d59e.91f9fd6a.js  50626053.c1590b3e.js  535b7f33.2e4c2121.js  535b7f33.68c85dfb.js  60392213.25ea5e93.js  746364b5.5badb946.js  75042e2f.889196ab.js  8fc37879.171dd721.js  9361db71.f45f472a.js  98c8faaa.8771eed2.js  98c8faaa.ad77f4a4.js  9fa90a0e.ce654039.js  a231cc4e.b177d087.js  b94e3c57.7df847e2.js  b94e3c57.810e7960.js  bd374970.7b32d266.js  config.js  content.js  main.1131971e.js  main.96d91cc5.js  main.js  navigation.js  router.js  runtime~main.8d09c28d.js  runtime~main.8eb5d448.js
docs/cli/: index.html
docs/docs/intro/: installation.html  overview.html  quickstart.html  why-zith.html
docs/docs/technical/cli/: build.html  check-command.html  check.html  clean.html  compile.html  docs.html  flags.html  fmt.html  new.html  overview.html  repl.html  run.html  struf-command.html
docs/docs/technical/faq/: overview.html  philosophy.html  rust-comparison.html  security.html  use-cases.html
docs/docs/technical/language/: control-flow.html  errors.html  functions.html  generics.html  memory.html  modules.html  overview.html  spec-core-topics.html  syntax.html  types.html  variables.html
docs/docs/technical/project/: overview.html
docs/docs/technical/raw/: data-structures.html  generics-deep.html  how-to-use.html  macros.html  metaprogramming.html  overview.html  raw-pointers.html  (+2 more)
docs/extras/: index.html
docs/intro/: index.html  quickstart.md  why-zith.md
docs/language/: index.html
docs/pages/: community.html  faq.html  installation.html  intro.html  quickstart.html
docs/pages/advanced/: data-structures.html  generics.html  how-to-use.html  macros.html  metaprogramming.html  overview.html  traits.html
docs/pages/cli/: build.html  check.html  clean.html  compile.html  docs.html  execute.html  flags.html  fmt.html  new.html  overview.html  repl.html  run.html
docs/pages/language/: control-flow.html  errors.html  functions.html  generics.html  memory.html  modules.html  overview.html  syntax.html  types.html  variables.html
docs/pages/project/: toml.html
docs/project/: index.html
docs/raw/: index.html
docs/technical/cli/: _category_.json  build.md  compile.md  docs.md
docs/technical/language/: 01-overview.md  control-flow.md  types.md
docs/technical/raw/: traits.md
docsaurus/: package.json  sidebars.js
docsaurus/docs/intro/: 01-overview.md  installation.md  quickstart.md  why-zith.md
docsaurus/src/pages/: index.js  index.module.css
docusaurus/: .gitignore
docusaurus-docs/: docusaurus.config.js  package-lock.json  sidebars.js
docusaurus-docs/docs/intro/: 01-overview.md  _category_.json  installation.md
docusaurus-docs/src/css/: custom.css
examples/: 01_basics.kali  02_flow_control.kali  03_lifecycle.kali  04_error_handling.kali
examples/dev/: prototype.zith  small.kali  small.zith
impl/: main.cpp
impl/ast/: ast.cpp  ast.h  parser.cpp  parser.h
impl/cli/: CLI.cpp
impl/diagnostics/: diagnostics.cpp  diagnostics.hpp
impl/import/: import.h  import.hpp  import_spec.md  symbol_resolver.hpp  symbol_table.hpp
impl/interface/: CLI.cpp
impl/lexer/: debug.h  keywords.cpp  tokenizer.cpp
impl/memory/: arena.hpp  arena_c_functions.c  file.c  utils.hpp
impl/parser/: keywords.cpp  parser.cpp  parser.h  parser.md  parser_context.hpp  parser_decl.cpp  parser_expr.cpp  parser_sema.cpp  parser_test.cpp  parser_utils.cpp  tokenizer.cpp
impl/types/: types.hpp
impl/utils/: debug.h
include/kalidous/: kalidous.h  kalidous.hpp
include/zith/: zith.hpp
lith/: CMakeLists.txt  README.md
lith/include/lith/: tokenizer.hpp
lith/src/: main.cpp  tokenizer.cpp
tests/: hello-world.kali  prototype.kali  test_expand_sema.cpp  test_import.cpp  test_import_system.cpp  test_main.cpp  test_parser.cpp
(+54 files in other folders)
